--- a/index.html
+++ b/index.html
@@ -1,1 +1,9 @@
-<h1>tg maxime</h1>
+<html lang="en">
+<head>
+    <meta charset="">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Document</title>
+</head>
+<body>
+</body>
+</html>
