--- a/index.html
+++ b/index.html
@@ -2,8 +2,9 @@
 <head>
     <meta charset="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Document</title>
+    <title>JOJOCVPRIME</title>
 </head>
 <body>
+
 </body>
 </html>
