--- a/index.html
+++ b/index.html
@@ -3,8 +3,9 @@
     <meta charset="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>JOJOCVPRIME</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-
+jojoprime
 </body>
 </html>
