--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-jojoprime
+
 </body>
+<footer>
+    bg image : https://unsplash.com/photos/an-aerial-view-of-a-road-surrounded-by-snow-covered-trees-9HRHn_41IgY
+</footer>
 </html>
