--- a/index.html
+++ b/index.html
@@ -5,10 +5,16 @@
     <title>JOJOCVPRIME</title>
     <link rel="stylesheet" href="style.css">
 </head>
+<header>
+    <div class="jojobarre">
+        <div id="ppgauche">PASCAL <br> Jonah</div>
+        <div class="pp"></div>
+        <div id="ppdroite">Etudiant <br> Informatique <br> (<- c'est moi)</div>
+    </div>
+</header>
 <body>
 
 </body>
 <footer>
-    bg image : https://unsplash.com/photos/an-aerial-view-of-a-road-surrounded-by-snow-covered-trees-9HRHn_41IgY
 </footer>
 </html>
