--- a/index.html
+++ b/index.html
@@ -1,20 +1,42 @@
-<html lang="en">
+<html lang="fr">
 <head>
-    <meta charset="">
+    <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>JOJOCVPRIME</title>
-    <link rel="stylesheet" href="style.css">
+    <title>CV de Jonah Pascal</title>
+    <link rel="stylesheet" href="css/style.css">
+    <script src="js/script.js" defer></script>
 </head>
-<header>
-    <div class="jojobarre">
-        <div id="ppgauche">PASCAL <br> Jonah</div>
-        <div class="pp"></div>
-        <div id="ppdroite">Etudiant <br> Informatique <br> (<- c'est moi)</div>
-    </div>
-</header>
 <body>
-
+    <header>
+        <h1>Jonah Pascal</h1>
+        <h2>Étudiant en informatique à l'IUT de Blagnac</h2>
+    </header>
+    <main>
+        <section id="about">
+            <h3>À propos de moi</h3>
+            <p>Je suis un étudiant passionné par l'informatique et le développement web.</p>
+        </section>
+        <section id="education">
+            <h3>Éducation</h3>
+            <ul>
+                <li>IUT de Blagnac - DUT Informatique (2023 - Présent)</li>
+            </ul>
+        </section>
+        <section id="skills">
+            <h3>Compétences</h3>
+            <ul>
+                <li>HTML, CSS, JavaScript</li>
+                <li>Développement web</li>
+                <li>Gestion de projet</li>
+            </ul>
+        </section>
+        <section id="contact">
+            <h3>Contact</h3>
+            <p>Email: jonah.pascal@example.com</p>
+        </section>
+    </main>
+    <footer>
+        <p>&copy; 2023 Jonah Pascal</p>
+    </footer>
 </body>
-<footer>
-</footer>
 </html>
