--- a/index.html
+++ b/index.html
@@ -5,18 +5,56 @@
     <title>CV Jonah PASCAL</title>
     <link rel="stylesheet" href="style.css">
 </head>
-<header>
-
-</header>
 <body>
-    <div class="maincontainer">
-        <h2>
-            À propos de moi
-        </h2>
-        <p>Je suis jojo le rigolo</p>
+<header>
+    <div class="profile">
+        <img src="profile.jpg" alt="Profile Image" class="profile-image">
+        <div class="profile-name">
+            <p>Jonah PASCAL</p>
+            <p class="profile-title">Étudiant en Informatique</p>
+        </div>
     </div>
-</body>
+</header>
+<div class="content-container">
+    <div id="maincontainer">
+        <h2 id="about">Me concernant</h2>
+        <p>Je suis un étudiant passionné par l'informatique et les nouvelles technologies, j'étudie actuellement à l'IUT de Blagnac pour devenir développeur d'application.
+            En plus de l'informatique, je joue beaucoup de piano, et je suis passionné de vélo de route.
+        </p>
+        <h3>Parcours scolaire</h3>
+        <p><strong>Première générale</strong>, spécialités <strong>Maths</strong>, <strong>Physique-Chimie</strong> et
+            <strong>NSI</strong>
+            <br><strong>Terminale générale</strong>, spécialités <strong>Maths</strong> et
+            <strong>Physique-Chimie</strong>
+            <br>Obtention du <strong>BAC</strong> mention <strong>BIEN</strong>
+            <br>Actuellement en première année de <strong>BUT Informatique</strong> à l'IUT de Blagnac
+        </p>
+        <h3>Compétences</h3>
+        <p>Durant ma formation a l'IUT, au lycée, et de manière autodidacte, j'ai appris certaines compétences, comme le
+            développement en <strong>Python</strong>, <strong>Java</strong>, <strong>C/C++</strong>,
+            ou encore le développement web avec <strong>Javascript</strong>, <strong>HTML</strong> et
+            <strong>CSS</strong>.
+            <br> J'ai également un bon niveau en <strong>Anglais</strong>, et je sais m'adapter rapidement à de
+            nouvelles
+            technologies
+        </p>
+        <div class="grid-container">
+            <div class="grid-item"><img src="image1.jpg" alt="Image 1"></div>
+            <div class="grid-item">
+                <p>Projets réalisés (en BUT) :</p>
+                <ul>
+                    <li>Programmation d'application en Java</li>
+                    <li>Recueil de besoins auprès d'un client</li>
+                    <li>Jeu sérieux de simulation d'entreprise</li>
+                </ul>
+            </div>
+            <div class="grid-item">Texte en bas à gauche</div>
+            <div class="grid-item"><img src="image2.jpg" alt="Image 2"></div>
+        </div>
+    </div>
+</div>
 <footer>
-
+    <p>Site réalisé par Jonah PASCAL</p>
 </footer>
+</body>
 </html>
